--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -3,7 +3,10 @@ name: Waka Readme
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 */2 * * *"  # every 2 hours
+    - cron: "0 */2 * * *"
+
+permissions:
+  contents: write
 
 jobs:
   update-readme:
