--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,7 +17,7 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           SHOW_TITLE: true
-          SHOW_TIME: true
+          SHOW_TIME: false
           SHOW_TOTAL: true
           SHOW_MASKED_TIME: false
           BLOCKS: ░▒▓█
